# memory_rag

./: .env.example  pyproject.toml  requirements.txt
rag_env/: pyvenv.cfg
rag_env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  jsondiff  jsonpatch  jsonpointer
ragbase/: chain.py  config.py  ingestor.py  model.py  retriever.py
